Web design added, cache and basic tests

--- a/src/main/resources/templates/end_test.html
+++ b/src/main/resources/templates/end_test.html
@@ -1,14 +1,35 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-<head> 
-    <title>Start your test!</title> 
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-</head>
-<body>
-    <p>You finished the question! Your answer:</span><br></p>
-	<p><span th:text="${result}"></span><br></p>
-	<p>Go back <a href="/">here</a></p>
-	
-
-</body>
+<!DOCTYPE html>
+<html lang="en">
+   <head>
+      <title>Your Result</title>
+      <meta charset="UTF-8" />
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900|Inconsolata" />
+      <link th:href="@{/css/general.css}" rel="stylesheet" />
+   </head>
+   <body>
+      <div class="smooth">
+         <header>
+            <a href='/'><h3>Personalitest!</h3></a>
+         </header>
+         <div class="main">
+            <div>
+               <svg class="title">
+                  <text x="0" y="40" th:text="'You are '+ ${result}"></text>
+               </svg>
+               <p class="lead">
+                  Did you expect this result? Its so interesting to find out which type we are​!
+                  Feel free to share the quiz with your friends!                
+               </p>
+            </div>
+            <form>
+               <a class="button" href="/" com > Go Back</a>
+            </form>
+         </div>
+         <footer id="bottom">
+            <div class="copy">
+               <p> © 2023 André Franco</p>
+            </div>
+         </footer>
+      </div>
+   </body>
 </html>
