--- a/src/main/resources/templates/personalitest.html
+++ b/src/main/resources/templates/personalitest.html
@@ -1,34 +1,32 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-<head> 
-    <title>Start your test!</title> 
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <style>
-		.button {
-		  background-color: #4CAF50;
-		  border: none;
-		  color: white;
-		  padding: 15px 32px;
-		  text-align: center;
-		  text-decoration: none;
-		  display: inline-block;
-		  font-size: 16px;
-		  margin: 4px 2px;
-		  cursor: pointer;
-		  width: 20px;
-		  height: 20px;
-		}
-	</style>
-</head>
-<body>
-    <p><span th:text="${question.question}"></span></p>
-    <tr th:each="answer: ${question.answers}">
-	     <button  th:onclick="myFunction([[(${answer.testChar})]])">  </button><td th:text="${answer.answer}"/><br>
-	</tr>
-	<p id="demo"></p>
-	
-	
-<script>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title th:text="'Question ' + ${question.testOrder}"> </title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900|Inconsolata">
+    <link th:href="@{/css/general.css}" rel="stylesheet" />  </head>
+  <body>
+    <div class="smooth">
+      <header>
+            <a href='/'><h3>Personalitest!</h3></a>
+      </header>
+      <div class="main">
+          <div>
+            <h2 th:text="${question.question}" style="font-size: 30px" />
+            <div th:each="answer: ${question.answers}">
+	     		<a class="button" th:text="${answer.answer}" th:onclick="myFunction([[(${answer.testChar})]])"></a>
+			</div>
+        </div>
+      </div>
+      <footer id="bottom">
+        <div class="copy">
+          <p>
+            © 2023 André Franco</a></p>
+        </div>
+      </footer>
+    </div>
+    <script>
 	function myFunction(answer) {
 	  if(window.location.search == ""){
 	  	window.location =  "?answers=" + answer;
@@ -37,5 +35,5 @@
 	  }
 	}
 </script>
-</body>
+  </body>
 </html>
